fixed issue with quiz header being shifted down. Seems to have been originating from having a paragraph tag without any header above it?

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
   font-family:'Open Sans', sans-serif;
 }
 
+
 a {
   text-decoration:none;
 }
@@ -31,6 +32,7 @@ header {
   margin: 0 0 30px 0;
   padding: 5px 0 0 0;
   width: 100%;
+  background-color: #468966;
     
 }
 
@@ -197,8 +199,9 @@ PAGE QUIZ
   margin: 0 0 0 10%;
 }
 
-#quiz p {
-  font-size: 1.25em
+.quiztext  {
+  font-size: 1.0em
+  font-family: 'Open Sans', sans-serif;
 }
 
 .btn {
